--- a/EvTapşırığı/assets/css/style.css
+++ b/EvTapşırığı/assets/css/style.css
@@ -1,68 +1,3 @@
-/* body {
-  background-color: red;
-}
-
-@media (max-width: 576px) {
-  body {
-    background-color: green;
-  }
-}
-
-@media (min-width: 577px) and (max-width: 768px) {
-  body {
-    background-color: blue;
-  }
-}
-
-@media (min-width: 769px) and (max-width: 992px) {
-  body {
-    background-color: yellow;
-  }
-}
-
-@media (min-width: 993px) and (max-width: 1200px) {
-  body {
-    background-color: pink;
-  }
-}
-@media (min-width: 1201px) {
-  body {
-    background-color: rgb(0, 0, 0);
-  }
-} */
-/* h1 {
-  display: none;
-}
-
-@media (max-width: 576px) {
-  h1:nth-child(1) {
-    display: block;
-  }
-}
-
-@media (min-width: 577px) and (max-width: 768px) {
-  h1:nth-child(2) {
-    display: block;
-  }
-}
-
-@media (min-width: 769px) and (max-width: 992px) {
-  h1:nth-child(3) {
-    display: block;
-  }
-}
-
-@media (min-width: 993px) and (max-width: 1200px) {
-  h1:nth-child(4) {
-    display: block;
-  }
-}
-
-@media (min-width: 1201px) {
-  h1:nth-child(5) {
-    display: block;
-  }
-} */
 .nav {
   height: 6rem;
   display: flex;
@@ -70,12 +5,14 @@
   padding: 0 2rem;
   gap: 4rem;
 }
+
 .navbar {
   display: flex;
   align-items: center;
   flex: 1;
   justify-content: space-between;
 }
+
 .nav_list {
   display: flex;
   gap: 2rem;
@@ -83,6 +20,7 @@
 .nav_list a:hover {
   color: #49719a;
 }
+
 .wrapper {
   border: 1px solid #212529;
   padding: 0.7rem 1rem;
@@ -103,26 +41,27 @@
   justify-content: center;
   align-items: center;
 }
+
 .hero {
   color: #fff;
   text-align: center;
 }
+
 .hero_title {
   font-size: 6rem;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   margin-bottom: 2rem;
 }
 
 .hero_text {
   font-size: 2rem;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 #card-area {
   padding: 6rem 0;
 }
+
 .cards {
   display: flex;
   justify-content: center;
@@ -141,24 +80,28 @@
   justify-content: space-between;
   align-items: center;
 }
+
 .image {
   width: 100%;
   height: 18rem;
   position: relative;
 }
+
 img {
   width: 100%;
   height: 100%;
 }
+
 .card_content {
   text-align: center;
 }
+
 .card_title {
   font-size: 2rem;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
   margin: 1rem 0;
 }
+
 .card_btn {
   padding: 1rem 2rem;
   border: 1px solid #212529;
@@ -172,6 +115,7 @@ img {
   background-color: #212529;
   color: #fff;
 }
+
 .sale {
   padding: 0.1rem 0.5rem;
   background-color: #212529;
@@ -181,6 +125,7 @@ img {
   top: 1rem;
   right: 1rem;
 }
+
 .footer {
   height: 10rem;
   background-color: #212529;
@@ -194,6 +139,7 @@ img {
   display: none;
   font-size: 2rem;
 }
+
 @media (max-width: 992px) {
   .navbar {
     display: none;
@@ -206,7 +152,6 @@ img {
     padding: 0 6rem;
   }
 }
-
 @media (max-width: 576px) {
   .card {
     width: 20rem;
@@ -222,4 +167,172 @@ img {
     font-size: 1.8rem;
   }
 }
+.nav {
+  height: 6rem;
+  display: flex;
+  align-items: center;
+  padding: 0 2rem;
+  gap: 4rem;
+}
 
+.navbar {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  justify-content: space-between;
+}
+
+.nav_list {
+  display: flex;
+  gap: 2rem;
+}
+.nav_list a:hover {
+  color: #49719a;
+}
+
+.wrapper {
+  border: 1px solid #212529;
+  padding: 0.7rem 1rem;
+  border-radius: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+.wrapper:hover {
+  background-color: #212529;
+  color: #fff;
+}
+
+#main {
+  height: 30rem;
+  background-color: #212529;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero {
+  color: #fff;
+  text-align: center;
+}
+
+.hero_title {
+  font-size: 6rem;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  margin-bottom: 2rem;
+}
+
+.hero_text {
+  font-size: 2rem;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+}
+
+#card-area {
+  padding: 6rem 0;
+}
+
+.cards {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: 23rem;
+  height: 37.5rem;
+  border: 1px solid #212529;
+  border-radius: 0.5rem;
+  padding: 1rem 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.image {
+  width: 100%;
+  height: 18rem;
+  position: relative;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+.card_content {
+  text-align: center;
+}
+
+.card_title {
+  font-size: 2rem;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  margin: 1rem 0;
+}
+
+.card_btn {
+  padding: 1rem 2rem;
+  border: 1px solid #212529;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  color: #212529;
+  background-color: transparent;
+  width: 11.7rem;
+}
+.card_btn:hover {
+  background-color: #212529;
+  color: #fff;
+}
+
+.sale {
+  padding: 0.1rem 0.5rem;
+  background-color: #212529;
+  color: #fff;
+  border-radius: 0.5rem;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.footer {
+  height: 10rem;
+  background-color: #212529;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.burger {
+  display: none;
+  font-size: 2rem;
+}
+
+@media (max-width: 992px) {
+  .navbar {
+    display: none;
+  }
+  .burger {
+    display: block;
+  }
+  .nav {
+    justify-content: space-between;
+    padding: 0 6rem;
+  }
+}
+@media (max-width: 576px) {
+  .card {
+    width: 20rem;
+    height: 35rem;
+  }
+  .card_title {
+    font-size: 1.8rem;
+  }
+  .hero_title {
+    font-size: 5rem;
+  }
+  .hero_text {
+    font-size: 1.8rem;
+  }
+}/*# sourceMappingURL=style.css.map */
